tests/errors/syntax/init-no-brace.fn
---
Description: Constructor declaration with no body
Expected: FN1007
---

type Broken
{
    x: f32
    init(x: f32)

    init{}
}

type Program
{
    fn Main -> i32
    {
        return 0
    }
}
